--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-paper": "^2.16.0",
     "react-native-reanimated": "^1.1.0",
     "react-native-screens": "^1.0.0-alpha.22",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.0",
+    "react-navigation-material-bottom-tabs": "^1.1.1",
     "react-navigation-stack": "^1.5.1",
     "react-navigation-tabs": "^2.4.0"
   },
