--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "fadfad",
-    "slug": "fadfad",
+    "name": "We Are With You",
+    "slug": "We Are With You",
     "privacy": "public",
     "sdkVersion": "34.0.0",
     "platforms": [
